--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@ header{
   border-bottom: 1px solid seashell;
   width: 100%;
   z-index: 1;
+  background-color: black;
 }
 header nav{
   padding-right: 20px;
@@ -30,4 +31,17 @@ a{
   padding-left: 10px;
   height: 50px;
   flex-grow: 1;
+}
+.mission{
+  display:flex;
+  margin: auto;
+  background-image: url("../images/img-mission-background.jpg");
+  height: 700px;
+  width: 1200px;
+  align-items: center;
+  padding-top: 70px;
+}
+.mission .text-content{
+  background-color: black;
+  width: 100%;
 }
