--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,7 +54,7 @@ a{
   padding-top: 70px;
 }
 .tea-of-the-month h2{
-  margin: 15px 0px;
+  margin-bottom: 15px;
 }
 .tea-of-the-month h4{
   margin: 10px 0px 15px 0px;
@@ -66,4 +66,31 @@ a{
 .menu-item{
   display:inline-block;
   padding: 10px;
+}
+.locations{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  height: 500px;
+  width: 1200px;
+  margin: auto;
+  padding-top: 70px;
+  background-image: url("../images/img-locations-background.jpg")
+}
+.locations h2{
+  margin: 0px;
+}
+.address-container{
+  display:flex;
+  justify-content: space-between;
+}
+.address{
+  display:inline-block;
+  margin: 15px 20px;
+  background-color:black;
+  width: 300px;
+}
+.address span{
+  display: block;
+  padding: 20px;
 }
