--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -82,7 +82,6 @@ a{
 }
 .address-container{
   display:flex;
-  justify-content: space-between;
 }
 .address{
   display:inline-block;
@@ -93,4 +92,15 @@ a{
 .address span{
   display: block;
   padding: 20px;
+}
+footer{
+  display: flex;
+  flex-direction: column;
+}
+.contact{
+  height: 200px;
+}
+.copyright{
+  text-align:left;
+  padding-left: 20px;
 }
